import { faker } from "@faker-js/faker";
import { TRPCError } from "@trpc/server";
import { describe, expect } from "vitest";

import { createAuthContext } from "~tests/backend/utils/context";
import {
	insertAccount,
	insertAccountSettings,
	insertAccountWithSession,
	insertConnectedPeers,
	insertDebt,
	insertPeer,
	insertReceipt,
	insertReceiptParticipant,
} from "~tests/backend/utils/data";
import {
	expectDatabaseDiffSnapshot,
	expectLocalTRPCError,
	expectTRPCError,
	expectUnauthorizedError,
} from "~tests/backend/utils/expect";
import { test } from "~tests/backend/utils/test";
import { t } from "~web/handlers/trpc";
import { runInBand } from "~web/handlers/utils.test";
import { UUID_REGEX } from "~web/handlers/validation";

import { procedure } from "./add";
import {
	getValidDebt,
	verifyAmount,
	verifyCurrencyCode,
	verifyNote,
	verifyPeerId,
	verifyReceiptId,
	verifyTimestamp,
} from "./utils.test";

const createCaller = t.createCallerFactory(t.router({ procedure }));

describe("debts.add", () => {
	describe("input verification", () => {
		expectUnauthorizedError((context) =>
			createCaller(context).procedure(getValidDebt()),
		);

		verifyAmount(
			(context, amount) =>
				createCaller(context).procedure({ ...getValidDebt(), amount }),
			"",
		);

		verifyNote(
			(context, note) =>
				createCaller(context).procedure({ ...getValidDebt(), note }),
			"",
		);

		verifyCurrencyCode(
			(context, currencyCode) =>
				createCaller(context).procedure({ ...getValidDebt(), currencyCode }),
			"",
		);

		verifyTimestamp(
			(context, timestamp) =>
				createCaller(context).procedure({ ...getValidDebt(), timestamp }),
			"",
		);

		verifyReceiptId(
			(context, receiptId) =>
				createCaller(context).procedure({ ...getValidDebt(), receiptId }),
			"",
		);

		verifyPeerId(
			(context, peerId) =>
				createCaller(context).procedure(getValidDebt(peerId)),
			"",
		);

		test("peer does not exist", async ({ ctx }) => {
			const { sessionId } = await insertAccountWithSession(ctx);
			const caller = createCaller(createAuthContext(ctx, sessionId));
			const fakePeerId = faker.string.uuid();
			await expectTRPCError(
				() => caller.procedure(getValidDebt(fakePeerId)),
				"NOT_FOUND",
				`Peer "${fakePeerId}" does not exist.`,
			);
		});

		test("peer is not owned by an account", async ({ ctx }) => {
			const { sessionId, accountId, account } =
				await insertAccountWithSession(ctx);
			await insertPeer(ctx, accountId);

			const { id: foreignAccountId } = await insertAccount(ctx);
			const { id: foreignPeerId } = await insertPeer(ctx, foreignAccountId);

			const caller = createCaller(createAuthContext(ctx, sessionId));
			await expectTRPCError(
				() => caller.procedure(getValidDebt(foreignPeerId)),
				"FORBIDDEN",
				`Peer "${foreignPeerId}" is not owned by "${account.email}".`,
			);
		});

		test("peer is ourselves", async ({ ctx }) => {
			const { sessionId, peerId } = await insertAccountWithSession(ctx);

			const caller = createCaller(createAuthContext(ctx, sessionId));
			await expectTRPCError(
				() => caller.procedure(getValidDebt(peerId)),
				"FORBIDDEN",
				`Cannot add a debt for yourself.`,
			);
		});

		test("there is a receipt id debt with that peer", async ({ ctx }) => {
			const { sessionId, accountId } = await insertAccountWithSession(ctx);
			const { id: receiptId } = await insertReceipt(ctx, accountId);
			const { id: peerId } = await insertPeer(ctx, accountId);
			await insertReceiptParticipant(ctx, receiptId, peerId);
			await insertDebt(ctx, accountId, peerId, { receiptId });

			const caller = createCaller(createAuthContext(ctx, sessionId));
			await expectTRPCError(
				() =>
					caller.procedure({
						...getValidDebt(peerId),
						receiptId,
					}),
				"FORBIDDEN",
				`There is already a debt for peer "${peerId}" in receipt "${receiptId}".`,
			);
		});

		test("mixed success and fail", async ({ ctx }) => {
			const { sessionId, accountId } = await insertAccountWithSession(ctx);
			const { id: peerId } = await insertPeer(ctx, accountId);
			const fakePeerId = faker.string.uuid();

			const caller = createCaller(createAuthContext(ctx, sessionId));
			const results = await expectDatabaseDiffSnapshot(ctx, () =>
				runInBand([
					() => caller.procedure(getValidDebt(peerId)),
					() =>
						caller.procedure(getValidDebt(fakePeerId)).catch((error) => error),
				]),
			);

			expect(results[0]).toStrictEqual<(typeof results)[0]>({
				id: results[0].id,
				updatedAt: Temporal.Now.zonedDateTimeISO(),
				reverseAccepted: undefined,
			});
			expect(results[1]).toBeInstanceOf(TRPCError);
		});
	});

	describe("functionality", () => {
		test("debt is added - autogenerated timestamp", async ({ ctx }) => {
			const { sessionId, accountId } = await insertAccountWithSession(ctx);
			const { id: peerId } = await insertPeer(ctx, accountId);

			// Verify unrelated data doesn't affect the result
			await insertPeer(ctx, accountId);
			await insertAccountSettings(ctx, accountId, { manualAcceptDebts: true });
			const { id: foreignAccountId } = await insertAccount(ctx);
			await insertPeer(ctx, foreignAccountId);

			const caller = createCaller(createAuthContext(ctx, sessionId));
			const result = await expectDatabaseDiffSnapshot(ctx, () =>
				caller.procedure(getValidDebt(peerId)),
			);
			expect(result.id).toMatch(UUID_REGEX);
			expect(result).toStrictEqual<typeof result>({
				id: result.id,
				updatedAt: Temporal.Now.zonedDateTimeISO(),
				reverseAccepted: undefined,
			});
		});

		test("debt is added - peer-provided timestamp", async ({ ctx }) => {
			const { sessionId, accountId } = await insertAccountWithSession(ctx);
			const { id: peerId } = await insertPeer(ctx, accountId);

			// Verify unrelated data doesn't affect the result
			await insertPeer(ctx, accountId);
			await insertAccountSettings(ctx, accountId, { manualAcceptDebts: true });
			const { id: foreignAccountId } = await insertAccount(ctx);
			await insertPeer(ctx, foreignAccountId);

			const caller = createCaller(createAuthContext(ctx, sessionId));
			const result = await expectDatabaseDiffSnapshot(ctx, () =>
				caller.procedure({
					...getValidDebt(peerId),
					timestamp: Temporal.PlainDate.from("2021-01-01"),
				}),
			);
			expect(result.id).toMatch(UUID_REGEX);
			expect(result).toStrictEqual<typeof result>({
				id: result.id,
				updatedAt: Temporal.Now.zonedDateTimeISO(),
				reverseAccepted: undefined,
			});
		});

		describe("multiple debts", () => {
			test("some are auto-accepted by the counterparty", async ({ ctx }) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);
				const { id: anotherForeignAccountId } = await insertAccount(ctx);
				const { id: nonAcceptingForeignAccountId } = await insertAccount(ctx, {
					settings: { manualAcceptDebts: true },
				});

				const [{ id: foreignPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					foreignAccountId,
				]);
				const [{ id: anotherForeignPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					anotherForeignAccountId,
				]);
				const [{ id: nonAcceptingPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					nonAcceptingForeignAccountId,
				]);
				const { id: receiptId } = await insertReceipt(ctx, accountId);

				// Verify unrelated data doesn't affect the result
				await insertPeer(ctx, accountId);
				await insertAccountSettings(ctx, accountId, {
					manualAcceptDebts: true,
				});
				await insertPeer(ctx, foreignAccountId);
				await insertPeer(ctx, anotherForeignAccountId);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const results = await expectDatabaseDiffSnapshot(ctx, () =>
					runInBand([
						() =>
							caller.procedure({ ...getValidDebt(foreignPeerId), receiptId }),
						() => caller.procedure(getValidDebt(foreignPeerId)),
						() => caller.procedure(getValidDebt(anotherForeignPeerId)),
						() => caller.procedure(getValidDebt(nonAcceptingPeerId)),
					]),
				);
				expect(results).toHaveLength(4);
				for (const { id } of results) {
					expect(id).toMatch(UUID_REGEX);
				}
				expect(results).toStrictEqual<typeof results>(
					results.map(({ id }, index) => ({
						id,
						updatedAt: Temporal.Now.zonedDateTimeISO(),
						// see Promise.all - accepting peers are 0, 1 and 2 indexes
						reverseAccepted: index <= 2,
					})) as typeof results,
				);
			});

			test("for the same auto-accepting account", async ({ ctx }) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);

				const [{ id: foreignPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					foreignAccountId,
				]);

				// Verify unrelated data doesn't affect the result
				await insertPeer(ctx, accountId);
				await insertAccountSettings(ctx, accountId, {
					manualAcceptDebts: true,
				});
				await insertPeer(ctx, foreignAccountId);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const results = await expectDatabaseDiffSnapshot(ctx, () =>
					runInBand([
						() => caller.procedure(getValidDebt(foreignPeerId)),
						() => caller.procedure(getValidDebt(foreignPeerId)),
						() => caller.procedure(getValidDebt(foreignPeerId)),
					]),
				);
				expect(results).toHaveLength(3);
				for (const { id } of results) {
					expect(id).toMatch(UUID_REGEX);
				}
				expect(results).toStrictEqual<typeof results>(
					results.map(({ id }) => ({
						id,
						updatedAt: Temporal.Now.zonedDateTimeISO(),
						// see Promise.all - all peers are accepting
						reverseAccepted: true,
					})) as typeof results,
				);
			});

			test("some auto-accepting accounts already had debts picked by the same receipt id", async ({
				ctx,
			}) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);

				const [{ id: foreignPeerId }, { id: selfPeerId }] =
					await insertConnectedPeers(ctx, [accountId, foreignAccountId]);

				const { id: receiptId } = await insertReceipt(ctx, foreignAccountId);
				const { id: counterpartyId } = await insertDebt(
					ctx,
					foreignAccountId,
					selfPeerId,
					{ receiptId },
				);

				// Verify unrelated data doesn't affect the result
				await insertPeer(ctx, accountId);
				await insertAccountSettings(ctx, accountId, {
					manualAcceptDebts: true,
				});
				await insertPeer(ctx, foreignAccountId);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const results = await expectDatabaseDiffSnapshot(ctx, () =>
					runInBand([
						() =>
							caller.procedure({
								...getValidDebt(foreignPeerId),
								receiptId,
							}),
						() => caller.procedure(getValidDebt(foreignPeerId)),
						() => caller.procedure(getValidDebt(foreignPeerId)),
					]),
				);
				expect(results).toHaveLength(3);
				for (const { id } of results) {
					expect(id).toMatch(UUID_REGEX);
				}
				expect(results).toStrictEqual<typeof results>(
					results.map(({ id }) => ({
						id,
						updatedAt: Temporal.Now.zonedDateTimeISO(),
						// see Promise.all - all peers are accepting
						reverseAccepted: true,
					})) as typeof results,
				);
				expect(results[0].id).toStrictEqual(counterpartyId);
			});

			test("partially with errors", async ({ ctx }) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);

				const fakePeerId = faker.string.uuid();
				const [{ id: foreignPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					foreignAccountId,
				]);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const results = await runInBand([
					() => caller.procedure(getValidDebt(foreignPeerId)),
					() =>
						caller.procedure(getValidDebt(fakePeerId)).catch((error) => error),
				]);
				expect(results).toHaveLength(2);
				expect(results[0].id).toMatch(UUID_REGEX);
				expect(results[0]).toStrictEqual<(typeof results)[0]>({
					id: results[0].id,
					updatedAt: Temporal.Now.zonedDateTimeISO(),
					reverseAccepted: true,
				});
				expect(results[1]).toBeInstanceOf(Error);
				expectLocalTRPCError(
					results[1] as Error,
					"NOT_FOUND",
					`Peer "${fakePeerId}" does not exist.`,
				);
			});
		});

		describe("auto-accepted by the counterparty", () => {
			test("counterparty's debt didn't exist before", async ({ ctx }) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);
				const [{ id: foreignPeerId }] = await insertConnectedPeers(ctx, [
					accountId,
					foreignAccountId,
				]);
				const { id: receiptId } = await insertReceipt(ctx, accountId);

				// Verify unrelated data doesn't affect the result
				await insertPeer(ctx, accountId);
				await insertAccountSettings(ctx, accountId, {
					manualAcceptDebts: true,
				});
				await insertPeer(ctx, foreignAccountId);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const result = await expectDatabaseDiffSnapshot(ctx, () =>
					caller.procedure({ ...getValidDebt(foreignPeerId), receiptId }),
				);
				expect(result.id).toMatch(UUID_REGEX);
				expect(result).toStrictEqual<typeof result>({
					id: result.id,
					updatedAt: Temporal.Now.zonedDateTimeISO(),
					reverseAccepted: true,
				});
			});

			test("counterparty's debt did exist before - picked by receipt id & owner account id", async ({
				ctx,
			}) => {
				const { sessionId, accountId } = await insertAccountWithSession(ctx);
				const { id: foreignAccountId } = await insertAccount(ctx);
				const [{ id: foreignPeerId }, { id: foreignSelfPeerId }] =
					await insertConnectedPeers(ctx, [accountId, foreignAccountId]);
				const { id: receiptId } = await insertReceipt(ctx, accountId);

				// Existing counter-debt
				const { id: counterpartyId } = await insertDebt(
					ctx,
					foreignAccountId,
					foreignSelfPeerId,
					{ receiptId },
				);

				// Verify unrelated data doesn't affect the result
				await insertPeer(ctx, accountId);
				await insertAccountSettings(ctx, accountId, {
					manualAcceptDebts: true,
				});
				await insertPeer(ctx, foreignAccountId);

				const caller = createCaller(createAuthContext(ctx, sessionId));
				const result = await expectDatabaseDiffSnapshot(ctx, () =>
					caller.procedure({ ...getValidDebt(foreignPeerId), receiptId }),
				);
				expect(result.id).toMatch(UUID_REGEX);
				expect(result).toStrictEqual<typeof result>({
					id: result.id,
					updatedAt: Temporal.Now.zonedDateTimeISO(),
					reverseAccepted: true,
				});
				expect(result.id).toStrictEqual(counterpartyId);
			});
		});
	});
});
